kubernetes/audiohub-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiohub-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiohub-ai
  template:
    metadata:
      labels:
        app: audiohub-ai
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: audiohub-ai
        image: cerit.io/roman_alexander_mariancik/audiohub-ai-image
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 50051
        volumeMounts:
          - mountPath: /.cache
            name: audiohub-ai-cache
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "3Gi"
            cpu: "1"
      volumes:
        - name: audiohub-ai-cache
          persistentVolumeClaim:
            claimName: audiohub-ai-pvc
