kubernetes/audiohub-ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiohub-ai-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "audiohub-ai-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/proxy-body-size: 16000m
spec:
  tls:
    - hosts:
        - "audiohub-recommender.dyn.cloud.e-infra.cz"
      secretName: audiohub-recommender-dyn-cloud-e-infra-cz-tls
  rules:
  - host: "audiohub-recommender.dyn.cloud.e-infra.cz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: audiohub-ai-svc
              port:
                number: 80
